--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node-html-parser": "^1.1.16"
   },
   "engines": {
-    "node": "10.6.3"
+    "node": "10.x"
   },
   "scripts": {
     "start": "node index.js"
