--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "github-calendar-parser": "^1.1.10",
     "node-html-parser": "^1.1.16"
